# AdsorptionSimulator

./: .gitignore  CMakeLists.txt  LICENSE
src/: AdsorptionSystem.cpp  BoundaryCondition.cpp  CMakeLists.txt  Cycle.cpp  DispersionModel.cpp  Fluid.cpp  Isotherm.cpp  MassTransferModel.cpp  PorousMedia.cpp  Reactor.cpp  Solver.cpp  ThomasAlgorithm.cpp  Wall.cpp
src/include/AdsorptionSimulator/: AdsorptionSystem.h  BoundaryCondition.h  Cycle.h  DispersionModel.h  Fluid.h  Isotherm.h  MassTransferModel.h  PorousMedia.h  Reactor.h  Solver.h  ThomasAlgoritms.h  Wall.h
test/: CMakeLists.txt  test_fluid_solver.cpp
